# GEES-OFFICIAL

./: .gitignore  README.md  docker-compose-test.yml
.github/workflows/: ci.yml
Arduino/: CMakeLists.txt  Dockerfile  FeatureExtraction_Test.cpp  FeatureExtraction_Test.h  FilterArray_Test.cpp  FilterArray_Test.h  ReadSensorData_Test.cpp  ReadSensorData_Test.h  Threshold_Test.cpp  Threshold_Test.h
Arduino/IMU_Reader/: Data.h  FeatureExtraction.cpp  FeatureExtraction.h  FilterArray.cpp  FilterArray.h  Globals.h  IMU_Reader.ino  RGB.cpp  RGB.h  ReadSensorData.cpp  ReadSensorData.h  SensorData.h  SensorReader.cpp  SensorReader.h  Threshold.cpp  Threshold.h  WiFiSender.cpp  WiFiSender.h
Arduino/Stubs/: Arduino.h  ICM20948_WE.h  KalmanFilter.h  RGB.h  SensorReader.h  SimpleKalmanFilter.h  Stubs.cpp  WiFiNINA.h
Gees_Backend/: Dockerfile  Dockerfile.test  docker-compose.yml  go.mod  go.sum  main.go  main_test.go
Gees_Backend/controllers/: actionController.go  actionController_test.go  arduinoDataController.go  arduinoDataController_test.go  controllers_test.go  gestureActionMappingController.go  gestureActionMappingController_test.go  gestureController.go  gestureController_test.go  gestureRecordingController.go  gestureViewingController.go
Gees_Backend/env/: development.env  docker.env  envHelper.go  envHelper_test.go  env_test.go  local-test.env  test.env
Gees_Backend/init/: createTestDatabase.sql  datasetv6.sql
Python/: Dockerfile  ModelTrainer.py  gesture_label_encoder.pkl  gesture_model.pt  propagate.py  requirements.txt  scaler.pkl
(+44 files in other folders)
